# TDMS

./: .clang-format  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  README.txt  _formulas.tex  _formulas_dark.tex  abstract__array__test__class_8h_source.html  annotated.html  annotated_dup.js  argument__parser_8h.html  argument__parser_8h.js  argument__parser_8h__dep__incl.dot  argument__parser_8h__dep__incl.map  argument__parser_8h__dep__incl.md5  argument__parser_8h__incl.dot  argument__parser_8h__incl.map  argument__parser_8h__incl.md5  argument__parser_8h_source.html  array__init_8h.html  array__init_8h.js  array__init_8h__incl.dot  array__init_8h__incl.map  array__init_8h__incl.md5  array__init_8h_source.html  array__test__class_8h.html  array__test__class_8h.js  array__test__class_8h__dep__incl.map  array__test__class_8h__dep__incl.md5  array__test__class_8h__incl.map  array__test__class_8h__incl.md5  array__test__class_8h_source.html  arrays_8h.html  arrays_8h.js  arrays_8h__dep__incl.dot  arrays_8h__dep__incl.map  arrays_8h__dep__incl.md5  arrays_8h__incl.dot  (+1794 more)
tdms/: CMakeLists.txt  Doxyfile
tdms/cmake/: FindFFTW.cmake  FindLib_CXX_Mac.cmake  FindOpenMP_Mac.cmake  targets.cmake  version_from_git.cmake
tdms/include/: argument_parser.h  array_init.h  arrays.h  cell_coordinate.h  dimensions.h  fdtd_grid_initialiser.h  field.h  fieldsample.h  globals.h  grid_labels.h  hdf5_io.h  input_file_settings.h  input_flags.h  input_matrices.h  input_output_names.h  interface.h  interpolate.h  interpolate_Efield.h  interpolate_Hfield.h  interpolation_methods.h  io.h  iterator.h  iterator_class.h  iterator_executor.h  iterator_intermediate_matlab_variables.h  iterator_loop_variables.h  iterator_main_loop.h  iterator_objects_from_infile.h  mat_io.h  matio.h  matrix_collection.h  mesh_base.h  numeric.h  numerical_derivative.h  openandorder.h  output_matrices.h  queuelinked.h  settings_in_input_file.h  shapes.h  simulation_parameters.h  (+9 more)
tdms/include/arrays/: cuboid.h  dispersive_multilayer.h  dtilde.h  eh_vec.h  incident_field.h  material_collections.h  tdms_matrix.h  tensor3d.h  vector_typedefs.h  xyz_vector.h
tdms/include/hdf5_io/: hdf5_base.h  hdf5_complex.h  hdf5_compound_types.h  hdf5_dimension.h  hdf5_reader.h  hdf5_writer.h
tdms/include/iterator/: iterator.h  iterator_executor.h  iterator_loop_variables.h  iterator_objects_from_infile.h  iterator_timers.h
tdms/include/output_matrices/: id_variables.h  output_matrices.h  output_matrix_pointers.h
tdms/include/simulation_manager/: fdtd_bootstrapper.h  loop_timers.h  loop_variables.h  objects_from_infile.h  pstd_variables.h  simulation_manager.h
tdms/matlab/: calc_dft_norm.m  efield_gauss.m  fdtd_bounds.m  fdtdduration.m  fdtdminsteps.m  focstratfield_general_pol_2d.m  gauss_pol.m  initialiseupdateterms.m  iteratefdtd_matrix.m  minsteps_fdtd.m  minsteps_pstd.m  multi_layer.m  yeeposition.m
tdms/matlab/file_parser/: material_file  read_material_data.m
tdms/matlabio/: Mat_io.cpp  Mat_io.h  matlabio.cpp  matlabio.h  numeric.h
tdms/matlabio/doc/: Makefile  matlab_array.tex
tdms/matlabio/document/: Makefile  array.fig  array.fig.bak  matlab_array.dvi  matlab_array.tex
tdms/mesh/: genmesh.m
tdms/src/: argument_parser.cpp  array_init.cpp  arrays.cpp  cli.cpp  dimensions.cpp  electric_field.cpp  fdtd_grid_initialiser.cpp  fieldsample.cpp  grid_labels.cpp  hdf5_io.cpp  input_flags.cpp  input_matrices.cpp  input_output_names.cpp  interface.cpp  interpolate.cpp  interpolate_Efield.cpp  interpolate_Hfield.cpp  interpolation_methods.cpp  io.cpp  iterator.cpp  iterator_main_loop.cpp  iterator_reducation.cpp  magnetic_field.cpp  main.cpp  matrix_collection.cpp  mesh_base.cpp  numeric.cpp  numerical_derivative.cpp  openandorder.cpp  openandorder_PSTD.cpp  output_matrices.cpp  queuelinked.cpp  shapes.cpp  simulation_parameters.cpp  source.cpp  surface_phasors.cpp  tdms_iterator.cpp  tensor_init.cpp  timer.cpp  utils.cpp  (+2 more)
tdms/src/arrays/: dispersive_multilayer.cpp  dtilde.cpp  eh_vec.cpp  indident_field.cpp  tdms_matrix.cpp  xyz_vector.cpp
tdms/src/fields/: base.cpp  current_density.cpp  electric.cpp  magnetic.cpp  split.cpp  td_field_exporter_2d.cpp
tdms/src/hdf5_io/: hdf5_base.cpp  hdf5_compound_types.cpp  hdf5_dimension.cpp  hdf5_reader.cpp  hdf5_writer.cpp
tdms/src/iterator/: iterator_class.cpp  iterator_executor.cpp  iterator_executor_main_loop.cpp  iterator_executor_main_loop_subfunctions.cpp  iterator_link_to_output_pointers.cpp  iterator_loop_variables.cpp  iterator_loop_variables_construction.cpp  iterator_loop_variables_destruction.cpp  iterator_loop_variables_output_links.cpp  iterator_objects_from_infile.cpp  iterator_post_loop_methods.cpp
tdms/src/output_matrices/: id_variables.cpp  output_matrices.cpp  output_matrix_pointers.cpp
tdms/src/simulation_manager/: execute_detector_subfunctions.cpp  execute_misc_subfunctions.cpp  execute_phasor_subfunctions.cpp  execute_simulation.cpp  execute_simulation_subfunctions.cpp  execute_update_Esplit.cpp  execute_update_Ex_split.cpp  fdtd_bootstrapper.cpp  loop_variables.cpp  objects_from_infile.cpp  pstd_variables.cpp  simulation_manager.cpp  source_term_updates.cpp  source_updates_pulsed.cpp  source_updates_steadystate.cpp  variable_groups.cpp
tdms/tests/: README.md  requirements.txt
tdms/tests/include/: abstract_array_test_class.h  array_test_class.h  unit_test_utils.h
tdms/tests/matlab/: README.md  iteratefdtd_matrix_allowable_source_configurations.md  run_in_temporary_directory.m  run_tests.m  test_fdtdduration.m  test_iteratefdtd_matrix.m  test_iteratefdtd_matrix_source_configurations.m  test_timekeeping_functions.m
tdms/tests/system/: README.md  read_config.py  regenerate_all.py  run_system_test.py  tdms_run.py  tdms_testing_class.py  test_arc01.py  test_arc02.py  test_arc03.py  test_arc08.py  test_arc09.py  test_arc10.py  test_arc12.py  test_arc13.py  test_cli.py  test_cyl.py  test_fdtd.py  test_fs.py  test_matlabengine.py  test_regen.py  test_system.py  utils.py  zip_file_config_object.py
tdms/tests/unit/: test_fields.cpp  (+16 more)
(+476 files in other folders)
